# zpe-platform-backend

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  conftest.py  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  secret.py
.github/workflows/: ci.yml  deploy.yml  pull-request-main.yml
alembic/: env.py
alembic/versions/: 6de19fd991a0_create_table_user.py  8af0579d5678_create_users_table.py
app/: config.py  dependencies.py  main.py
app/api/v1/endpoints/: user.py  user_api.py
app/core/: config.py  security.py
app/db/: __init__.py  base_class.py  session.py  session_factory.py
app/handlers/: user_handler.py
app/models/: user.py
app/repositories/: generic_repository.py  user_repository.py
app/schemas/: __init__.py  user.py  user_schema.py
app/services/: user_service.py
tests/: __init__.py  test_main.py
