[tool.poetry]
name = "zpe-platform-backend"
version = "0.1.0"
description = ""
authors = ["Maykon D Granemann <maykondgranemann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
alembic = "^1.13.3"
psycopg2-binary = "^2.9.9"
passlib = {extras = ["argon2"], version = "^1.7.4"}
pydantic-settings = "^2.5.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
